--- a/front-end/assets/css/2-layouts/_home.scss
+++ b/front-end/assets/css/2-layouts/_home.scss
@@ -7,71 +7,4 @@
   ================================
 */
 
-.home {
-  & main {
-    .__page {
-      width: 100%;
-      /* max-width: 1600px; */
-      display: flex;
-      margin: auto;
-
-      & .__content {
-        width: 80%;
-        background-color: main.$ColorSecond;
-
-        & .__header {
-          height: 35px;
-          display: flex;
-          align-items: center;
-          background-color: main.$ColorMain;
-          border: solid 2px main.$ColorMain;
-
-          &>* {
-            font-size: reset.toRem(14);
-            padding-left: 20px;
-          }
-        }
-      }
-    }
-  }
-}
-
-/* 
-  ================================
-  RESPONSIVE
-  ================================
-*/
-
-/* DESKTOP - 1200px*/
-@include main.breakpoint(smashDesktop) {
-  .home {
-    & main {
-      .__page {
-        & .__content {
-          width: calc(100% - 180px);
-
-          //& .__header {}
-        }
-      }
-    }
-  }
-}
-
-/* LAPTOP - 1024px*/
-@include main.breakpoint(smashLaptop) {
-  .home {
-    & main {
-      .__page {
-        & .__content {
-          width: calc(100% - 40px);
-          margin-left: 40px;
-
-          //& .__header {}
-          & .__table {
-            overflow: auto;
-          }
-        }
-      }
-    }
-  }
-}
+.home {}
