--- a/front-end/assets/css/2-layouts/_header.scss
+++ b/front-end/assets/css/2-layouts/_header.scss
@@ -7,80 +7,4 @@
   ================================
 */
 
-header {
-    width: 100%;
-    height: 80px;
-    background-color: main.$ColorZero;
-    box-shadow: 0 0 5px main.$ColorOne;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-
-    & .container {
-        width: inherit;
-        height: inherit;
-        @include main.FlexBetCen;
-
-        & h1 {
-            font: {
-                size: reset.toRem(18);
-                font-weight: 600;
-            }
-        }
-    }
-}
-
-/* 
-  ================================
-  RESPONSIVE
-  ================================
-*/
-
-// MOBILE - 400px
-@include main.breakpoint(smashMobile) {
-    header {
-        position: initial;
-
-        & .container {
-            justify-content: center;
-
-            & h1 {
-                text-align: center;
-            }
-
-            & .button {
-                text-transform: none;
-                position: fixed;
-                bottom: 20px;
-                right: 20px;
-
-                & button,
-                & a,
-                & input {
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                    overflow: hidden;
-                    position: relative;
-                    padding: 0;
-                    font-size: 0;
-
-                    &::after {
-                        content: '+';
-                        width: 100%;
-                        height: 100%;
-                        @include main.FlexCenCen;
-                        background-color: main.$ColorFour;
-                        border: solid 1px main.$ColorFour;
-                        border-radius: 50%;
-                        font-size: 20px;
-                        font-weight: bold;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-                }
-            }
-        }
-    }
-}
+header {}
